--- a/assets/sass/estrutura/_header.scss
+++ b/assets/sass/estrutura/_header.scss
@@ -1,56 +1,77 @@
-// Header principal
+// Header
 .header {
-	position: relative;
-	z-index: $z_index_header;
 	float: left;
 	width: 100%;
-	background: #FFF;
-	padding: 20px 0;
-	
-	// MOBILE
-	@include mq(s) {	
-		position: fixed;
-		top: 0;
-		left: 0;
-		padding: 10px 0;
-		text-align: center;
-		box-shadow: 0 2px 5px rgba(0,0,0,.26);
+	height: 100vh;
+	text-align: center;
+
+	// Container
+	.container {
+		height: 100%;
+		display: flex;
+		align-items: center;
 	}
-}
 
-// Logo
-.header-logo {
-	float: left;
-	max-width: 120px;
-	width: auto;
+	// Wrap
+	.header-wrap {
+		width: 100%;
+		height: auto;
+	}
 
-	// MOBILE
-	@include mq(s) {	
-		float: none;
+	// Title
+	h1 {
+		float: left;
+		width: 100%;
+		font-family: $fonte_titulo;
+		font-size: 72px;
+		font-weight: 700;
+		color: #FFF;
+		margin-top: 50px;
+		margin-bottom: 50px;
+
+		// TABLET
+		@include mq(m) {
+			margin-top: 0px;
+		}
+
+		// MOBILE
+		@include mq(s) {
+			margin-top: 0px;
+			font-size: 36px;
+		}
+	}
+
+	// Subtitle
+	h2 {
+		float: left;
+		width: 100%;
+		font-family: $fonte_titulo;
+		font-size: 28px;
+		color: #FFF;
+		text-align: left;
+
+		// TABLET
+		@include mq(m) {
+			margin-bottom: 50px;
+			text-align: center;
+		}
+
+		// MOBILE
+		@include mq(s) {
+			margin-bottom: 50px;
+			text-align: center;
+			font-size: 20px;
+		}
+	}
+
+	// Profile photo
+	figure {
 		display: inline-block;
-		vertical-align: top;
-		max-width: 55px;
-	}
-
-	// TABLET
-	@include mq(m) {				
-		max-width: 100px;
-	}
-}
-
-// Direita
-.header-direita {
-	float: right;
-	width: auto;
-	margin-top: 20px;
-
-	// TABLET
-	@include mq(m) {				
-		margin-top: 10px;
-	}
-
-	// MOBILE
-	@include mq(s) {				
-		display: none;
+		width: 300px;
+		height: 300px;
+		border-radius: 50%;
+		border: 10px solid $cor_primaria;
+		overflow: hidden;
+		background: $cor_primaria;
 	}
 }
