--- a/assets/sass/style.min.scss
+++ b/assets/sass/style.min.scss
@@ -5,7 +5,7 @@
 // Slick
 @import 'lib/slick';
 // Lightbox
-@import 'lib/lightbox';
+//@import 'lib/lightbox';
 
 // ------------------------------------
 //	GERAIS
