--- a/assets/sass/estrutura/_header.scss
+++ b/assets/sass/estrutura/_header.scss
@@ -5,11 +5,21 @@
 	height: 100vh;
 	text-align: center;
 
+	// MOBILE
+	@include mq(s) {
+		height: calc(100vh - 50px);
+	}
+
 	// Container
 	.container {
 		height: 100%;
 		display: flex;
 		align-items: center;
+
+		// MOBILE
+		@include mq(s) {
+			display: block;
+		}
 	}
 
 	// Wrap
@@ -37,7 +47,7 @@
 		// MOBILE
 		@include mq(s) {
 			margin-top: 0px;
-			font-size: 36px;
+			font-size: 32px;
 		}
 	}
 
@@ -73,5 +83,11 @@
 		border: 10px solid $cor_primaria;
 		overflow: hidden;
 		background: $cor_primaria;
+
+		// MOBILE
+		@include mq(s) {
+			width: 250px;
+			height: 250px;
+		}
 	}
 }
