--- a/assets/sass/gerais/_geral.scss
+++ b/assets/sass/gerais/_geral.scss
@@ -3,8 +3,8 @@
 // ------------------------------------
 
 // Cores do site
-$cor_primaria: #000;
-$cor_secundaria: blue;
+$cor_primaria: #222;
+$cor_secundaria: #C6FF00;
 
 // Fundo 2 (Cor alternativa para o fundo do site)
 $cor_fundo2: #E7E7E7;
@@ -463,15 +463,17 @@ textarea.campo {
 
 // Botão padrão
 .btn {
+	position: relative;
 	display: inline-block;
 	vertical-align: middle;
 	width: auto;
-	background: none;
-	border: 2px solid $cor_primaria;
+	background: $cor_secundaria;
+	border: 2px solid $cor_secundaria;
 	border-radius: 0px;
 	font-family: $fonte_titulo;
 	font-size: 18px;
 	line-height: 100%;
+	font-weight: 700;
 	text-transform: uppercase;
 	color: $cor_primaria;	
 	text-align: center;
@@ -481,8 +483,12 @@ textarea.campo {
 	transition: .3s ease-out;
 
 	&:hover, &:focus, &:active, &.active {
-		background: $cor_primaria;
-		color: #FFF;
+		/* background: $cor_secundaria;
+		color: $cor_primaria; */
+
+		&::before {
+			transform: translate(0, 0);
+		}
 	} 
 
 	&[disabled] {
@@ -492,6 +498,23 @@ textarea.campo {
 
 	i {
 		margin-right: 10px;
+	}
+
+	// Hover
+	&::before {
+		content: '';
+		display: block;
+		position: absolute;
+		z-index: -1;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border: 2px solid $cor_secundaria;
+		transform: translate(10px, 10px);
+		transition: .3s ease-out;
 	}
 }
 
